lab1/Test/L1-A-7-42.output
Error Type A at Line 11
Error Type A at Line 18
Error Type A at Line 22
