lab1/Test/L1-A-7-42.cmm
struct sf hhe9rJZ89fdixd0 
;
int N9 ( int PWf9j , float nclOD29Ce [ 339608472 ] 
  ) {
  if ( HwwpTe36pEhe0bydm )   aSC5IbTWPkXDSvQajsS ;
else   while ( iJOoov5X )   return KswnMpf5Ip9 = KwCpljDi8EXiNv3kgi5N 
    || d7qY0FoRDxNW < hxmJXI5 + UxBrVcs0cDW8 / ! - XEc1vp12T 
    [ Au84dSLL_a22fv4tHaB && tXJ <= i - LTWBmPx7v * - 
    qGl ( gLm7nMN7uTju , O && ! ( utEA7O2d == AXuPOTomr2A 
    ( a6p_qSkBgOE8WayWKG , EwRJ50HbsC , edoBr8WFLTWoZIVxc 
    > $! ! - bb_5fC4AbubUx8JZv ( ofPH26A51ycS || MpiTsu8 
    && m42BQ1v2WLw * - W3udb4gA >= 2014446089 ) ) ) - 
    r2dng ( ) ) ] . XDAzlE39ri6H != 2045489849.705753772 
    ;


}
#int ;
int ;
struct {
  struct ojoWf1YSG {
    int VlrSS4s ;'
  }ORECqdK6c , zw002wf0f , lOavSx7ldrZAqW1 ;
  int t9X = JfN4v6k3 ;
};
int ;
int kAjzBhc8mfuRNQNfziX6 , aStk7u50e 

;
int w3cQLLSuimts9 ( ) {
}
int ;
int nr4YrGBs7onttllUX ( ) {
  if ( yjq1Hj7Q5sxjjQPECI )   usQJS7O653Mc ;
else   if ( LWLqCbKCU1Z2a4 ) {
  }

}
